--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>젠틀몬스터 스타일 웹사이트</title>
+    <title>Pixabay 이미지 슬라이더</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -13,29 +13,12 @@
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#products">Products</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <!-- 전체 화면 이미지 슬라이더 -->
-    <section id="home" class="slider">
-        <div class="slide active" style="background-image: url('image1.jpg');"></div>
-        <div class="slide" style="background-image: url('image2.jpg');"></div>
-        <div class="slide" style="background-image: url('image3.jpg');"></div>
-        <div class="slide" style="background-image: url('image4.jpg');"></div>
-    </section>
-
-    <!-- 제품 섹션 -->
-    <section id="products" class="products">
-        <h2>Our Collection</h2>
-        <div class="product-grid">
-            <div class="product" style="background-image: url('product1.jpg');"></div>
-            <div class="product" style="background-image: url('product2.jpg');"></div>
-            <div class="product" style="background-image: url('product3.jpg');"></div>
-        </div>
-    </section>
+    <section id="home" class="slider"></section>
 
     <script src="script.js"></script>
 </body>
