--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
         </div>
     </section>
 
+    <!-- 전체 화면 이미지 슬라이더 -->
+    <section id="home" class="slider">
+        <!-- JavaScript에서 슬라이드 이미지 추가 -->
+    </section>
+
     <script src="script.js"></script>
 </body>
 </html>
