--- a/index.html
+++ b/index.html
@@ -1,36 +1,24 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2024 선글라스 컬렉션</title>
+    <title>Pixabay 이미지 슬라이더</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- 헤더 및 네비게이션 -->
+    <!-- 네비게이션 바 -->
     <header>
         <nav class="navbar">
-            <a href="#" class="logo">Brand Logo</a>
             <ul>
-                <li><a href="#collection">Collection</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#products">Products</a></li>
             </ul>
         </nav>
     </header>
 
-    <!-- 컬렉션 섹션 -->
-    <section id="collection" class="collection">
-        <h1>2024 선글라스 컬렉션</h1>
-        <div class="product-grid" id="productGrid">
-            <!-- JavaScript에서 제품 카드 추가 -->
-        </div>
-    </section>
-
     <!-- 전체 화면 이미지 슬라이더 -->
-    <section id="home" class="slider">
-        <!-- JavaScript에서 슬라이드 이미지 추가 -->
-    </section>
+    <section id="home" class="slider"></section>
 
     <script src="script.js"></script>
 </body>
