--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <!-- 네비게이션 바 -->
     <header>
         <nav class="navbar">
+            <div class="logo">
+                으뜸50안경 수원역점
+            </div>
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#products">Products</a></li>
@@ -19,6 +22,11 @@
 
     <!-- 전체 화면 이미지 슬라이더 -->
     <section id="home" class="slider"></section>
+
+    <!-- 푸터 -->
+    <footer class="footer">
+        <p>&copy; 2023 으뜸50안경 수원역점. 모든 권리 보유.</p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
