--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pixabay 이미지 슬라이더</title>
+    <title>으뜸50안경 수원역점</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,17 +11,37 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                으뜸50안경 수원역점
+                <a href="#home">으뜸50안경 수원역점</a>
             </div>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#products">Products</a></li>
+                <li><a href="#event">이달의 행사</a></li>
+                <li><a href="#glasses">안경</a></li>
+                <li><a href="#sunglasses">선글라스</a></li>
+                <li><a href="#contactlens">콘택트렌즈</a></li>
+                <li><a href="#inquiry">문의사항</a></li>
             </ul>
         </nav>
     </header>
 
     <!-- 전체 화면 이미지 슬라이더 -->
     <section id="home" class="slider"></section>
+
+    <!-- 각 섹션 추가 (필요에 따라 내용 추가) -->
+    <section id="event">
+        <!-- 이달의 행사 내용 -->
+    </section>
+    <section id="glasses">
+        <!-- 안경 내용 -->
+    </section>
+    <section id="sunglasses">
+        <!-- 선글라스 내용 -->
+    </section>
+    <section id="contactlens">
+        <!-- 콘택트렌즈 내용 -->
+    </section>
+    <section id="inquiry">
+        <!-- 문의사항 내용 -->
+    </section>
 
     <!-- 푸터 -->
     <footer class="footer">
